Fix alignment for search items and product listings:

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -380,8 +380,7 @@ ul.categories li:hover {
   display: flex;
   flex-wrap: wrap;
   grid-template-columns: repeat(5, 5vw);
-  margin-left: 95px;
-  margin-right: 150px;
+  margin-left: 130px;
   margin-top: 15px;
 }
 
@@ -394,7 +393,7 @@ ul.categories li:hover {
 .product {
   width: 180px;
   height: 150px;
-  margin: 10px;
+  margin: 25px;
   margin-bottom: 70px;
   border: 1px solid lightgray;
   border-radius: 3px;
